--- a/frontend/src/styles/pages/users/users.scss
+++ b/frontend/src/styles/pages/users/users.scss
@@ -1,6 +1,6 @@
 .ct-users-project-edit-role {
   .ct-select-options-list {
-    top: 10px;
+    top: 3px;
   }
 
   .ct-select-options {
@@ -27,7 +27,7 @@
 
 .ct-grid-userpic {
   position: absolute;
-  top: -7px;
+  top: -5px;
 
   & + .ct-grid-link-text {
     display: inline-block;
